sonar fix remove coveralls conflict